--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<ol>
 				<li>Open this page with a browser compliant with WebRTC
 					(Chrome, Firefox).</li>
-				<li>Click on <i>Start</i> button to start recording.
+				<li>Click on <i>Record</i> button to start recording.
 				</li>
 				<li>Click on <i>Stop</i> to finish the communication.
 				</li>
@@ -71,8 +71,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-2">
-				<a id="start" href="#" class="btn btn-success"> <span
-					class="glyphicon glyphicon-play"></span> Start
+				<a id="record" href="#" class="btn btn-success"> <span
+					class="glyphicon glyphicon-play"></span> Record 
 				</a> <br /> <br /> <a id="stop" href="#" class="btn btn-danger"> <span
 					class="glyphicon glyphicon-stop"></span> Stop
 				</a> <br /> <br /> <a id="play" href="#" class="btn btn-warning"> <span
