remove unnecessary html form

--- a/index.html
+++ b/index.html
@@ -29,63 +29,22 @@
 <title>Kurento Tutorial: IPCam Recorder : H.264 Video Only</title>
 </head>
 <body>
-
-	<header>
-		<div class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-collapse"></button>
-					<a class="navbar-brand" href=".">Kurento Tutorial</a>
-				</div>
-				<div class="collapse navbar-collapse"
-					id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a
-							href="https://github.com/Kurento/kurento-tutorial-js/tree/master/kurento-recorder"><span
-								class="glyphicon glyphicon-file"></span> Source Code</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</header>
-
 	<div class="container">
-		<div class="page-header">
-			<h1>Tutorial: IPCam Recorder : H.264 Video Only</h1>
-			<p>
-				This application shows a <i>PlayerEndpoint</i> connected to <i>RecorderEndpoing </i>
-							 and <i>WebRtcEndpoint</i>.
-					To run this demo follow these steps:
-			</p>
-			<ol>
-				<li>Open this page with a browser compliant with WebRTC
-					(Chrome, Firefox).</li>
-				<li>Click on <i>Record</i> button to start recording.
-				</li>
-				<li>Click on <i>Stop</i> to finish the communication.
-				</li>
-				<li>Click on <i>Play</i> to see the recording.
-				</li>
-			</ol>
-		</div>
 		<div class="row">
-			<div class="col-md-2">
+			<div class="col-md-5">
+				<h3>GPS 121.5728163, 25.0777304</h3>
+				<video id="videoOutput" autoplay width="480px" height="360px"
+					poster="img/webrtc.png"></video>
 				<a id="record" href="#" class="btn btn-success"> <span
 					class="glyphicon glyphicon-play"></span> Record 
-				</a> <br /> <br /> <a id="stop" href="#" class="btn btn-danger"> <span
+				</a> <a id="stop" href="#" class="btn btn-danger"> <span
 					class="glyphicon glyphicon-stop"></span> Stop
-				</a> <br /> <br /> <a id="play" href="#" class="btn btn-warning"> <span
+				</a> <a id="play" href="#" class="btn btn-warning"> <span
 					class="glyphicon glyphicon-play"></span> Play
 				</a>
 			</div>
-			<div class="col-md-5">
-				<h3>Remote stream</h3>
-				<video id="videoOutput" autoplay width="480px" height="360px"
-					poster="img/webrtc.png"></video>
-			</div>
 		</div>
-		<div class="row">
+		<div class="row" style="display:none">
 			<div class="col-md-12">
 				<label class="control-label" for="console">Console</label><br>
 				<br>
@@ -95,32 +54,6 @@
 			</div>
 		</div>
 	</div>
-
-	<footer>
-		<div class="foot-fixed-bottom">
-			<div class="container text-center">
-				<hr />
-				<div class="row">&copy; 2014-2015 Kurento</div>
-				<div class="row">
-					<div class="col-md-4">
-						<a href="http://www.urjc.es"> <img src="img/urjc.gif"
-							alt="Universidad Rey Juan Carlos" height="50px" />
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="http://www.kurento.org"> <img src="img/kurento.png"
-							alt="Kurento" height="50px" />
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="http://www.naevatec.com"> <img src="img/naevatec.png"
-							alt="Naevatec" height="50px" />
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 
 </body>
 </html>
