add crowd detector support

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src="bower_components/kurento-utils/js/kurento-utils.js"></script>
 
 <script src="js/index.js"></script>
-<title>Kurento Tutorial: IPCam Recorder : H.264 Video Only</title>
+<title>Streetlight View</title>
 </head>
 <body>
 	<div class="container">
@@ -44,7 +44,7 @@
 				</a>
 			</div>
 		</div>
-		<div class="row" style="display:none">
+		<div class="row" style="display: none">
 			<div class="col-md-12">
 				<label class="control-label" for="console">Console</label><br>
 				<br>
