extend crowd detection to full screen

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <script src="bower_components/kurento-client/js/kurento-client.js"></script>
 <script src="bower_components/kurento-utils/js/kurento-utils.js"></script>
+<script src="bower_components/kurento-module-crowddetector/js/kurento-module-crowddetector.js"></script>
 
 <script src="js/index.js"></script>
 <title>Streetlight View</title>
